Clean icons Add tokenizable icon

--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -101,87 +101,9 @@
         <file alias="images/Small_Pro_III.png">images/Small_Pro_III.png</file>
         <file alias="images/Small_Pro_III@2x.png">images/Small_Pro_III@2x.png</file>
         <file alias="images/Small_Pro_III@3x.png">images/Small_Pro_III@3x.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-outline.png">images/StalledIssues/alert-circle-small-outline.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-outline@2x.png">images/StalledIssues/alert-circle-small-outline@2x.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-outline@3x.png">images/StalledIssues/alert-circle-small-outline@3x.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-solid.png">images/StalledIssues/alert-circle-small-solid.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-solid@2x.png">images/StalledIssues/alert-circle-small-solid@2x.png</file>
-        <file alias="images/StalledIssues/alert-circle-small-solid@3x.png">images/StalledIssues/alert-circle-small-solid@3x.png</file>
-        <file alias="images/StalledIssues/alert_circle_small_default.png">images/StalledIssues/alert_circle_small_default.png</file>
-        <file alias="images/StalledIssues/alert_circle_small_default@2x.png">images/StalledIssues/alert_circle_small_default@2x.png</file>
-        <file alias="images/StalledIssues/alert_circle_small_default@3x.png">images/StalledIssues/alert_circle_small_default@3x.png</file>
-        <file alias="images/StalledIssues/check_default.png">images/StalledIssues/check_default.png</file>
-        <file alias="images/StalledIssues/check_default@2x.png">images/StalledIssues/check_default@2x.png</file>
-        <file alias="images/StalledIssues/check_default@3x.png">images/StalledIssues/check_default@3x.png</file>
-        <file alias="images/StalledIssues/cloud_default.png">images/StalledIssues/cloud_default.png</file>
-        <file alias="images/StalledIssues/cloud_default@2x.png">images/StalledIssues/cloud_default@2x.png</file>
-        <file alias="images/StalledIssues/cloud_default@3x.png">images/StalledIssues/cloud_default@3x.png</file>
-        <file alias="images/StalledIssues/edit-small-outline.png">images/StalledIssues/edit-small-outline.png</file>
-        <file alias="images/StalledIssues/edit-small-outline@2x.png">images/StalledIssues/edit-small-outline@2x.png</file>
-        <file alias="images/StalledIssues/edit-small-outline@3x.png">images/StalledIssues/edit-small-outline@3x.png</file>
-        <file alias="images/StalledIssues/edit-small-solid.png">images/StalledIssues/edit-small-solid.png</file>
-        <file alias="images/StalledIssues/edit-small-solid@2x.png">images/StalledIssues/edit-small-solid@2x.png</file>
-        <file alias="images/StalledIssues/edit-small-solid@3x.png">images/StalledIssues/edit-small-solid@3x.png</file>
-        <file alias="images/StalledIssues/folder-small-outline.png">images/StalledIssues/folder-small-outline.png</file>
-        <file alias="images/StalledIssues/folder-small-outline@2x.png">images/StalledIssues/folder-small-outline@2x.png</file>
-        <file alias="images/StalledIssues/folder-small-outline@3x.png">images/StalledIssues/folder-small-outline@3x.png</file>
-        <file alias="images/StalledIssues/folder-small-solid.png">images/StalledIssues/folder-small-solid.png</file>
-        <file alias="images/StalledIssues/folder-small-solid@2x.png">images/StalledIssues/folder-small-solid@2x.png</file>
-        <file alias="images/StalledIssues/folder-small-solid@3x.png">images/StalledIssues/folder-small-solid@3x.png</file>
-        <file alias="images/StalledIssues/folder_error_default.png">images/StalledIssues/folder_error_default.png</file>
-        <file alias="images/StalledIssues/folder_error_default@2x.png">images/StalledIssues/folder_error_default@2x.png</file>
-        <file alias="images/StalledIssues/folder_error_default@3x.png">images/StalledIssues/folder_error_default@3x.png</file>
-        <file alias="images/StalledIssues/folder_orange_default.png">images/StalledIssues/folder_orange_default.png</file>
-        <file alias="images/StalledIssues/folder_orange_default@2x.png">images/StalledIssues/folder_orange_default@2x.png</file>
-        <file alias="images/StalledIssues/folder_orange_default@3x.png">images/StalledIssues/folder_orange_default@3x.png</file>
         <file alias="images/StalledIssues/ic-open-outside.png">images/StalledIssues/ic-open-outside.png</file>
         <file alias="images/StalledIssues/ic-open-outside@2x.png">images/StalledIssues/ic-open-outside@2x.png</file>
         <file alias="images/StalledIssues/ic-open-outside@3x.png">images/StalledIssues/ic-open-outside@3x.png</file>
-        <file alias="images/StalledIssues/monitor_default.png">images/StalledIssues/monitor_default.png</file>
-        <file alias="images/StalledIssues/monitor_default@2x.png">images/StalledIssues/monitor_default@2x.png</file>
-        <file alias="images/StalledIssues/monitor_default@3x.png">images/StalledIssues/monitor_default@3x.png</file>
-        <file alias="images/StalledIssues/more-circle-small-outline.png">images/StalledIssues/more-circle-small-outline.png</file>
-        <file alias="images/StalledIssues/more-circle-small-outline@2x.png">images/StalledIssues/more-circle-small-outline@2x.png</file>
-        <file alias="images/StalledIssues/more-circle-small-outline@3x.png">images/StalledIssues/more-circle-small-outline@3x.png</file>
-        <file alias="images/StalledIssues/more-circle-small-solid.png">images/StalledIssues/more-circle-small-solid.png</file>
-        <file alias="images/StalledIssues/more-circle-small-solid@2x.png">images/StalledIssues/more-circle-small-solid@2x.png</file>
-        <file alias="images/StalledIssues/more-circle-small-solid@3x.png">images/StalledIssues/more-circle-small-solid@3x.png</file>
-        <file alias="images/StalledIssues/options_ico_rest.png">images/StalledIssues/options_ico_rest.png</file>
-        <file alias="images/StalledIssues/options_ico_rest@2x.png">images/StalledIssues/options_ico_rest@2x.png</file>
-        <file alias="images/StalledIssues/options_ico_rest@3x.png">images/StalledIssues/options_ico_rest@3x.png</file>
-        <file alias="images/StalledIssues/refresh.png">images/StalledIssues/refresh.png</file>
-        <file alias="images/StalledIssues/refresh@2x.png">images/StalledIssues/refresh@2x.png</file>
-        <file alias="images/StalledIssues/refresh@3x.png">images/StalledIssues/refresh@3x.png</file>
-        <file alias="images/StalledIssues/remove_default.png">images/StalledIssues/remove_default.png</file>
-        <file alias="images/StalledIssues/remove_default@2x.png">images/StalledIssues/remove_default@2x.png</file>
-        <file alias="images/StalledIssues/remove_default@3x.png">images/StalledIssues/remove_default@3x.png</file>
-        <file alias="images/StalledIssues/rename_node_default.png">images/StalledIssues/rename_node_default.png</file>
-        <file alias="images/StalledIssues/rename_node_default@2x.png">images/StalledIssues/rename_node_default@2x.png</file>
-        <file alias="images/StalledIssues/rename_node_default@3x.png">images/StalledIssues/rename_node_default@3x.png</file>
-        <file alias="images/StalledIssues/rotate-ccw.png">images/StalledIssues/rotate-ccw.png</file>
-        <file alias="images/StalledIssues/rotate-ccw@2x.png">images/StalledIssues/rotate-ccw@2x.png</file>
-        <file alias="images/StalledIssues/rotate-ccw@3x.png">images/StalledIssues/rotate-ccw@3x.png</file>
-        <file alias="images/StalledIssues/rotate_cw_default.png">images/StalledIssues/rotate_cw_default.png</file>
-        <file alias="images/StalledIssues/rotate_cw_default@2x.png">images/StalledIssues/rotate_cw_default@2x.png</file>
-        <file alias="images/StalledIssues/rotate_cw_default@3x.png">images/StalledIssues/rotate_cw_default@3x.png</file>
-        <file alias="images/StalledIssues/settings-stalled-issues.png">images/StalledIssues/settings-stalled-issues.png</file>
-        <file alias="images/StalledIssues/settings-stalled-issues@2x.png">images/StalledIssues/settings-stalled-issues@2x.png</file>
-        <file alias="images/StalledIssues/settings-stalled-issues@3x.png">images/StalledIssues/settings-stalled-issues@3x.png</file>
-        <file alias="images/StalledIssues/solved-issues-outline.png">images/StalledIssues/solved-issues-outline.png</file>
-        <file alias="images/StalledIssues/solved-issues-outline@2x.png">images/StalledIssues/solved-issues-outline@2x.png</file>
-        <file alias="images/StalledIssues/solved-issues-outline@3x.png">images/StalledIssues/solved-issues-outline@3x.png</file>
-        <file alias="images/StalledIssues/solved-issues-solid.png">images/StalledIssues/solved-issues-solid.png</file>
-        <file alias="images/StalledIssues/solved-issues-solid@2x.png">images/StalledIssues/solved-issues-solid@2x.png</file>
-        <file alias="images/StalledIssues/solved-issues-solid@3x.png">images/StalledIssues/solved-issues-solid@3x.png</file>
-        <file alias="images/StalledIssues/states/auto_solved_state.png">images/StalledIssues/states/auto_solved_state.png</file>
-        <file alias="images/StalledIssues/states/auto_solved_state@2x.png">images/StalledIssues/states/auto_solved_state@2x.png</file>
-        <file alias="images/StalledIssues/states/auto_solved_state@3x.png">images/StalledIssues/states/auto_solved_state@3x.png</file>
-        <file alias="images/StalledIssues/states/failed_state.png">images/StalledIssues/states/failed_state.png</file>
-        <file alias="images/StalledIssues/states/failed_state@2x.png">images/StalledIssues/states/failed_state@2x.png</file>
-        <file alias="images/StalledIssues/states/failed_state@3x.png">images/StalledIssues/states/failed_state@3x.png</file>
-        <file alias="images/StalledIssues/states/solved_state.png">images/StalledIssues/states/solved_state.png</file>
-        <file alias="images/StalledIssues/states/solved_state@2x.png">images/StalledIssues/states/solved_state@2x.png</file>
-        <file alias="images/StalledIssues/states/solved_state@3x.png">images/StalledIssues/states/solved_state@3x.png</file>
         <file alias="images/StalledIssues/tree_double_link_default.png">images/StalledIssues/tree_double_link_default.png</file>
         <file alias="images/StalledIssues/tree_double_link_default@2x.png">images/StalledIssues/tree_double_link_default@2x.png</file>
         <file alias="images/StalledIssues/tree_double_link_default@3x.png">images/StalledIssues/tree_double_link_default@3x.png</file>
@@ -194,12 +116,6 @@
         <file alias="images/StalledIssues/tree_link_end_default.png">images/StalledIssues/tree_link_end_default.png</file>
         <file alias="images/StalledIssues/tree_link_end_default@2x.png">images/StalledIssues/tree_link_end_default@2x.png</file>
         <file alias="images/StalledIssues/tree_link_end_default@3x.png">images/StalledIssues/tree_link_end_default@3x.png</file>
-        <file alias="images/StalledIssues/x-circle-outline.png">images/StalledIssues/x-circle-outline.png</file>
-        <file alias="images/StalledIssues/x-circle-outline@2x.png">images/StalledIssues/x-circle-outline@2x.png</file>
-        <file alias="images/StalledIssues/x-circle-outline@3x.png">images/StalledIssues/x-circle-outline@3x.png</file>
-        <file alias="images/StalledIssues/x-circle-solid.png">images/StalledIssues/x-circle-solid.png</file>
-        <file alias="images/StalledIssues/x-circle-solid@2x.png">images/StalledIssues/x-circle-solid@2x.png</file>
-        <file alias="images/StalledIssues/x-circle-solid@3x.png">images/StalledIssues/x-circle-solid@3x.png</file>
         <file alias="images/Storage_Quota_almost_full@3x.png">images/Storage_Quota_almost_full@3x.png</file>
         <file alias="images/Storage_Quota_full@3x.png">images/Storage_Quota_full@3x.png</file>
         <file alias="images/Switches/switch_checked_down-macx.svg">images/Switches/switch_checked_down-macx.svg</file>
@@ -1318,5 +1234,6 @@
         <file alias="arrows-up-down-circle">images/themed/tokenizable/arrows-up-down-circle.svg</file>
         <file alias="chevron-left_default">images/themed/tokenizable/chevron-left_default.svg</file>
         <file alias="alert-triangle">images/themed/tokenizable/Stalled Issues/Header/alert-triangle.svg</file>
+        <file alias="info">images/themed/tokenizable/info.svg</file>
     </qresource>
 </RCC>
