--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueActionTitle.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueActionTitle.ui
@@ -187,7 +187,7 @@ border-radius: 4px;
                 <number>0</number>
                </property>
                <item>
-                <widget class="QPushButton" name="icon">
+                <widget class="QToolButton" name="icon">
                  <property name="minimumSize">
                   <size>
                    <width>24</width>
@@ -200,6 +200,9 @@ border-radius: 4px;
                    <height>24</height>
                   </size>
                  </property>
+                 <property name="focusPolicy">
+                  <enum>Qt::NoFocus</enum>
+                 </property>
                  <property name="text">
                   <string notr="true"/>
                  </property>
@@ -209,11 +212,8 @@ border-radius: 4px;
                    <height>24</height>
                   </size>
                  </property>
-                 <property name="flat">
-                  <bool>false</bool>
-                 </property>
                  <property name="type" stdset="0">
-                  <string notr="true">icon</string>
+                  <string notr="true">icon-label</string>
                  </property>
                 </widget>
                </item>
@@ -292,7 +292,7 @@ border-radius: 4px;
                 <number>0</number>
                </property>
                <item>
-                <widget class="QLabel" name="iconLabel">
+                <widget class="QToolButton" name="iconLabel">
                  <property name="minimumSize">
                   <size>
                    <width>16</width>
@@ -305,8 +305,14 @@ border-radius: 4px;
                    <height>16</height>
                   </size>
                  </property>
+                 <property name="focusPolicy">
+                  <enum>Qt::NoFocus</enum>
+                 </property>
                  <property name="text">
-                  <string/>
+                  <string notr="true"/>
+                 </property>
+                 <property name="type" stdset="0">
+                  <string notr="true">icon-label</string>
                  </property>
                 </widget>
                </item>
