--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueTab.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueTab.ui
@@ -83,13 +83,7 @@ QFrame[isSelected=false] QLabel
     <number>0</number>
    </property>
    <item>
-    <widget class="QLabel" name="icon">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
+    <widget class="QToolButton" name="icon">
      <property name="minimumSize">
       <size>
        <width>16</width>
@@ -102,8 +96,14 @@ QFrame[isSelected=false] QLabel
        <height>16</height>
       </size>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
-      <string/>
+      <string notr="true"/>
+     </property>
+     <property name="type" stdset="0">
+      <string notr="true">icon-label</string>
      </property>
     </widget>
    </item>
