Change QPushButton for QAbstractButton in order to apply the style to QToolButtons

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
@@ -289,7 +289,7 @@ padding-right: 24px;
 /*
     Icon label / Icon button
 */
-QPushButton[type="icon-label"], QPushButton[type="icon-button"]
+QAbstractButton[type="icon-label"], QPushButton[type="icon-button"]
 {
 border: none;
 border-radius: 6px;
@@ -301,14 +301,14 @@ min-width: 0px;
 /*
     Icon label dimensions
 */
-QPushButton[type="icon-label"][dimension=small]
+QAbstractButton[type="icon-label"][dimension=small]
 {
 height: 24px;
 width: 24px;
 qproperty-iconSize:16px;
 }
 
-QPushButton[type="icon-label"][dimension=medium]
+QAbstractButton[type="icon-label"][dimension=medium]
 {
 height: 32px;
 width: 32px;
