--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
@@ -457,6 +457,40 @@ background-color: #ff797c80; /*colorToken.button-disabled*/
 }
 
 /*
+    Ghost button.
+*/
+QPushButton[type="ghost"]
+{
+background-color: transparent;
+color: #04101E; /*colorToken.button-outline*/
+}
+
+QPushButton:hover[type="ghost"]
+{
+color: #39424E; /*colorToken.button-outline-hover*/
+}
+
+QPushButton:pressed[type="ghost"]
+{
+color: #535B65; /*colorToken.button-outline-pressed*/
+}
+
+QPushButton:disabled[type="ghost"]
+{
+color: #C1C2C4; /*colorToken.text-disabled*/
+}
+
+/*
+    Link button.
+*/
+QPushButton[type="link"]
+{
+background-color: transparent;
+color: #2C5BEB; /*colorToken.link-primary*/
+}
+
+
+/*
     Icon: button that acts like a label with an icon
 */
 IconLabel
