--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
@@ -369,15 +369,49 @@ color: #ff797c80; /*colorToken.icon-disabled*/
 }
 
 /*
-    Icon label
+    class = icon-label
 */
-QAbstractButton.icon-label
+QToolButton.icon-label
 {
 background-color: transparent;
 }
 
 /*
-    Outline button.
+    Buttons
+    Valid for both button classes:
+    1) Normal buttons (text or text+icon) > NO property class needed
+    2) Only-Icon buttons > class = "icon-label"
+*/
+
+/*
+    type = primary
+*/
+QPushButton[type="primary"]
+{
+background-color: #ff04101E; /*colorToken.button-primary*/
+color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
+}
+
+QPushButton:hover[type="primary"]
+{
+color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
+background-color: #ff39424E; /*colorToken.button-primary-hover*/
+}
+
+QPushButton:pressed[type="primary"]
+{
+color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
+background-color: #ff535B65; /*colorToken.button-primary-pressed*/
+}
+
+QPushButton:disabled[type="primary"]
+{
+color: #ffC1C2C4; /*colorToken.text-disabled*/
+background-color: #ff797c80; /*colorToken.button-disabled*/
+}
+
+/*
+    type = outline
 */
 QPushButton[type="outline"]
 {
@@ -405,34 +439,7 @@ border-color: #ff494a4d; /*colorToken.border-disabled*/
 }
 
 /*
-    Primary button.
-*/
-QPushButton[type="primary"]
-{
-background-color: #ff04101E; /*colorToken.button-primary*/
-color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
-}
-
-QPushButton:hover[type="primary"]
-{
-color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
-background-color: #ff39424E; /*colorToken.button-primary-hover*/
-}
-
-QPushButton:pressed[type="primary"]
-{
-color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
-background-color: #ff535B65; /*colorToken.button-primary-pressed*/
-}
-
-QPushButton:disabled[type="primary"]
-{
-color: #ffC1C2C4; /*colorToken.text-disabled*/
-background-color: #ff797c80; /*colorToken.button-disabled*/
-}
-
-/*
-    Secondary button.
+    type = secondary
 */
 QPushButton[type="secondary"]
 {
@@ -457,7 +464,7 @@ background-color: #ff797c80; /*colorToken.button-disabled*/
 }
 
 /*
-    Ghost button.
+    type = ghost
 */
 QPushButton[type="ghost"]
 {
@@ -481,21 +488,12 @@ color: #C1C2C4; /*colorToken.text-disabled*/
 }
 
 /*
-    Link button.
+    type = link
 */
 QPushButton[type="link"]
 {
 background-color: transparent;
 color: #2C5BEB; /*colorToken.link-primary*/
-}
-
-
-/*
-    Icon: button that acts like a label with an icon
-*/
-IconLabel
-{
-background-color: transparent;
 }
 
 /*
